# bressen

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
bressen/: __init__.py  basisgegevens.py  bressen.py  constants.py  exceptions.py  geometries.py  io.py  kering.py  styles.py  vlakken.py
env/: environment.yml  environment_dev.yml
notebooks/: 1_voorbereiden_data.ipynb  2_processen_bressen.ipynb
scripts/: bressen.py  test_set.py
test/: test_io.py
tests/: conftest.py  test_basisgegevens.py  test_bressen.py  test_io.py
tests/data/: basisgegevens.gpkg-shm  basisgegevens.gpkg-wal
tests/data/bressen/: bressen.gpkg
